add markdown and remove unused code

--- a/sentiment-analysis/sentiment-analysis.ipynb
+++ b/sentiment-analysis/sentiment-analysis.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "fd0dc197",
+   "metadata": {},
+   "source": [
+    "# Analisis Sentimen dengan Deep Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "429a3d4c",
+   "metadata": {},
+   "source": [
+    "## Import dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "8599389b",
    "metadata": {},
    "outputs": [],
@@ -24,15 +40,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5329b693",
+   "metadata": {},
+   "source": [
+    "## Common Functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "1dc985dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "###\n",
-    "# common functions\n",
-    "###\n",
     "def set_seed(seed):\n",
     "    random.seed(seed)\n",
     "    np.random.seed(seed)\n",
@@ -58,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "503793ee",
    "metadata": {},
    "outputs": [],
@@ -68,86 +89,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7cdf7c03",
+   "metadata": {},
+   "source": [
+    "## Konfigurasi dan Load Pre-trained Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "be56531b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2651dc4fcb94e49aa217955751142a6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/229k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db4a4772db294e7f91fab59adc3da891",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/112 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe8b148ed90c476fb9f1f875c6245864",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/2.00 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "651cb10eb68a49429c76bfd3a90103c1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/1.53k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71a847107d994fdda0bef129eaaf54db",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/498M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at indobenchmark/indobert-base-p1 and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at indobenchmark/indobert-base-p1 and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
@@ -164,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "10cbb45e",
    "metadata": {},
    "outputs": [
@@ -482,7 +441,7 @@
        ")"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "a23ce79f",
    "metadata": {},
    "outputs": [
@@ -503,7 +462,7 @@
        "124443651"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,8 +472,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "003b70da",
+   "metadata": {},
+   "source": [
+    "## Persiapan Dataset Analisis Sentimen\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "af483ade",
    "metadata": {},
    "outputs": [],
@@ -526,127 +493,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "7ddb61f5",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Dataset' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mDocumentSentimentDataset\u001b[39;00m(\u001b[43mDataset\u001b[49m):\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;66;03m# Static constant variable\u001b[39;00m\n\u001b[1;32m      3\u001b[0m     LABEL2INDEX \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpositive\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mneutral\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnegative\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m2\u001b[39m} \u001b[38;5;66;03m# Map dari label string ke index\u001b[39;00m\n\u001b[1;32m      4\u001b[0m     INDEX2LABEL \u001b[38;5;241m=\u001b[39m {\u001b[38;5;241m0\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpositive\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m1\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mneutral\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m2\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnegative\u001b[39m\u001b[38;5;124m'\u001b[39m} \u001b[38;5;66;03m# Map dari Index ke label string\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Dataset' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "class DocumentSentimentDataset(Dataset):\n",
-    "    # Static constant variable\n",
-    "    LABEL2INDEX = {'positive': 0, 'neutral': 1, 'negative': 2} # Map dari label string ke index\n",
-    "    INDEX2LABEL = {0: 'positive', 1: 'neutral', 2: 'negative'} # Map dari Index ke label string\n",
-    "    NUM_LABELS = 3 # Jumlah label\n",
-    "   \n",
-    "    def load_dataset(self, path):\n",
-    "        df = pd.read_csv(path, sep=\"\\t\", header=None) # Baca tsv file dengan pandas\n",
-    "        df.columns = ['text','sentiment'] # Berikan nama pada kolom tabel\n",
-    "        df['sentiment'] = df['sentiment'].apply(lambda lab: self.LABEL2INDEX[lab]) # Konversi string label ke index\n",
-    "        return df\n",
-    "   \n",
-    "    def __init__(self, dataset_path, tokenizer, *args, **kwargs):\n",
-    "        self.data = self.load_dataset(dataset_path) # Load tsv file\n",
-    " \n",
-    "        # Assign tokenizer, disini kita menggunakan tokenizer subword dari HuggingFace\n",
-    "        self.tokenizer = tokenizer \n",
-    " \n",
-    "    def __getitem__(self, index):\n",
-    "        data = self.data.loc[index,:] # Ambil data pada baris tertentu dari tabel\n",
-    "        text, sentiment = data['text'], data['sentiment'] # Ambil nilai text dan sentiment\n",
-    "        subwords = self.tokenizer.encode(text) # Tokenisasi text menjadi subword\n",
-    "    \n",
-    "    # Return numpy array dari subwords dan label\n",
-    "        return np.array(subwords), np.array(sentiment), data['text']\n",
-    "   \n",
-    "    def __len__(self):\n",
-    "        return len(self.data)  # Return panjang dari dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "97b3f0b6",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'DataLoader' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [20], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mDocumentSentimentDataLoader\u001b[39;00m(\u001b[43mDataLoader\u001b[49m):\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, max_seq_len\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m512\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m      3\u001b[0m         \u001b[38;5;28msuper\u001b[39m(DocumentSentimentDataLoader, \u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'DataLoader' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "class DocumentSentimentDataLoader(DataLoader):\n",
-    "    def __init__(self, max_seq_len=512, *args, **kwargs):\n",
-    "        super(DocumentSentimentDataLoader, self).__init__(*args, **kwargs)\n",
-    "        self.max_seq_len = max_seq_len # Assign batas maksimum subword\n",
-    "        self.collate_fn = self._collate_fn # Assign fungsi collate_fn dengan fungsi yang kita definisikan\n",
-    "       \n",
-    "    def _collate_fn(self, batch):\n",
-    "        batch_size = len(batch) # Ambil batch size\n",
-    "        max_seq_len = max(map(lambda x: len(x[0]), batch)) # Cari panjang subword maksimal dari batch \n",
-    "        max_seq_len = min(self.max_seq_len, max_seq_len) # Bandingkan dengan batas yang kita tentukan sebelumnya\n",
-    "       \n",
-    "    # Buat buffer untuk subword, mask, dan sentiment labels, inisialisasikan semuanya dengan 0\n",
-    "        subword_batch = np.zeros((batch_size, max_seq_len), dtype=np.int64)\n",
-    "        mask_batch = np.zeros((batch_size, max_seq_len), dtype=np.float32)\n",
-    "        sentiment_batch = np.zeros((batch_size, 1), dtype=np.int64)\n",
-    "       \n",
-    "    # Isi semua buffer\n",
-    "        for i, (subwords, sentiment, raw_seq) in enumerate(batch):\n",
-    "            subwords = subwords[:max_seq_len]\n",
-    "            subword_batch[i,:len(subwords)] = subwords\n",
-    "            mask_batch[i,:len(subwords)] = 1\n",
-    "            sentiment_batch[i,0] = sentiment\n",
-    "           \n",
-    "    # Return subword, mask, dan sentiment data\n",
-    "        return subword_batch, mask_batch, sentiment_batch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "0480f5d3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/prinanda/opt/anaconda3/envs/ml/lib/python3.8/site-packages/torch/utils/data/dataloader.py:554: UserWarning: This DataLoader will create 16 worker processes in total. Our suggested max number of worker in current system is 8 (`cpuset` is not taken into account), which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
-      "  warnings.warn(_create_warning_msg(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_dataset = DocumentSentimentDataset(train_dataset_path, tokenizer, lowercase=True)\n",
     "valid_dataset = DocumentSentimentDataset(valid_dataset_path, tokenizer, lowercase=True)\n",
     "test_dataset = DocumentSentimentDataset(test_dataset_path, tokenizer, lowercase=True)\n",
     " \n",
-    "train_loader = DocumentSentimentDataLoader(dataset=train_dataset, max_seq_len=512, batch_size=32, num_workers=16, shuffle=True)  \n",
-    "valid_loader = DocumentSentimentDataLoader(dataset=valid_dataset, max_seq_len=512, batch_size=32, num_workers=16, shuffle=False)  \n",
-    "test_loader = DocumentSentimentDataLoader(dataset=test_dataset, max_seq_len=512, batch_size=32, num_workers=16, shuffle=False)"
+    "train_loader = DocumentSentimentDataLoader(dataset=train_dataset, max_seq_len=512, batch_size=32, num_workers=8, shuffle=True)  \n",
+    "valid_loader = DocumentSentimentDataLoader(dataset=valid_dataset, max_seq_len=512, batch_size=32, num_workers=8, shuffle=False)  \n",
+    "test_loader = DocumentSentimentDataLoader(dataset=test_dataset, max_seq_len=512, batch_size=32, num_workers=8, shuffle=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "c5fd0284",
    "metadata": {},
    "outputs": [
@@ -672,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "d086b42d",
    "metadata": {},
    "outputs": [
@@ -692,8 +555,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "38bc5fb2",
+   "metadata": {},
+   "source": [
+    "## Uji Model dengan Contoh Kalimat"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "18276517",
    "metadata": {},
    "outputs": [
@@ -717,22 +588,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e0eeb475",
+   "metadata": {},
+   "source": [
+    "## Fine Tuning dan Evaluasi"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "cea408a8",
    "metadata": {},
    "outputs": [],
    "source": [
     "optimizer = optim.Adam(model.parameters(), lr=3e-6)\n",
-    "model = model.cuda()"
+    "# model = model.cuda()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "df065de7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(Epoch 1) TRAIN LOSS:0.9839 LR:0.00000300:   2%|▏         | 8/344 [05:10<3:17:52, 35.33s/it]"
+     ]
+    }
+   ],
    "source": [
     "# Train\n",
     "n_epochs = 5\n",
@@ -746,7 +633,7 @@
     "    train_pbar = tqdm(train_loader, leave=True, total=len(train_loader))\n",
     "    for i, batch_data in enumerate(train_pbar):\n",
     "        # Forward model\n",
-    "        loss, batch_hyp, batch_label = forward_sequence_classification(model, batch_data[:-1], i2w=i2w, device='cuda')\n",
+    "        loss, batch_hyp, batch_label = forward_sequence_classification(model, batch_data[:-1], i2w=i2w, device='mps')\n",
     " \n",
     "        # Update model\n",
     "        optimizer.zero_grad()\n",
@@ -778,7 +665,7 @@
     "    pbar = tqdm(valid_loader, leave=True, total=len(valid_loader))\n",
     "    for i, batch_data in enumerate(pbar):\n",
     "        batch_seq = batch_data[-1]        \n",
-    "        loss, batch_hyp, batch_label = forward_sequence_classification(model, batch_data[:-1], i2w=i2w, device='cuda')\n",
+    "        loss, batch_hyp, batch_label = forward_sequence_classification(model, batch_data[:-1], i2w=i2w, device='mps')\n",
     "        \n",
     "        # Calculate total loss\n",
     "        valid_loss = loss.item()\n",
@@ -840,6 +727,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7f56fc4",
+   "metadata": {},
+   "source": [
+    "## Prediksi Sentimen"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2ac40bdf",
@@ -857,12 +752,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "6cd2daf8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Analisis Sentimen dengan Support Vector Machine (SVM)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb4afbf3",
+   "metadata": {},
+   "source": [
+    "## Import Dependencies"
+   ]
   },
   {
    "cell_type": "code",
@@ -879,6 +782,14 @@
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer, TfidfVectorizer\n",
     "from sklearn import svm\n",
     "from sklearn.metrics import classification_report"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73caa5bc",
+   "metadata": {},
+   "source": [
+    "## Membaca Data\n"
    ]
   },
   {
@@ -904,6 +815,14 @@
     " \n",
     "#mengambil 5 data teratas pada data train\n",
     "data_train.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18b72c4a",
+   "metadata": {},
+   "source": [
+    "## Analisis Data"
    ]
   },
   {
@@ -990,6 +909,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3275b08d",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering dengan TF-IDF"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "afddeeb0",
@@ -1004,6 +931,14 @@
     " \n",
     "train_vectors = vectorizer.fit_transform(data_train['Teks'])\n",
     "test_vectors = vectorizer.transform(data_test['Teks'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "952f0634",
+   "metadata": {},
+   "source": [
+    "## Klasifikasi Sentimen dengan Support Vector Machine\n"
    ]
   },
   {
@@ -1032,6 +967,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8b55a10",
+   "metadata": {},
+   "source": [
+    "### Prediksi Sentimen"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1e162e20",
@@ -1042,35 +985,11 @@
     "teks_vector = vectorizer.transform([teks]) # vectorizing\n",
     "print(classifier_linear.predict(teks_vector))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "184909aa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5db0d1c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e14dad3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.10 ('ml')",
    "language": "python",
    "name": "python3"
   },
@@ -1085,6 +1004,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a90a6b41a184c82b81f92a70ac57839a68e4f2dc45bda3c00abc3a4f6b2b4010"
+   }
   }
  },
  "nbformat": 4,
