try train using m1 pro mac

--- a/sentiment-analysis/sentiment-analysis.ipynb
+++ b/sentiment-analysis/sentiment-analysis.ipynb
@@ -603,6 +603,7 @@
    "outputs": [],
    "source": [
     "optimizer = optim.Adam(model.parameters(), lr=3e-6)\n",
+    "# model = model.to(torch.device('mps'))\n",
     "# model = model.cuda()"
    ]
   },
@@ -616,7 +617,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(Epoch 1) TRAIN LOSS:0.9839 LR:0.00000300:   2%|▏         | 8/344 [05:10<3:17:52, 35.33s/it]"
+      "(Epoch 1) TRAIN LOSS:0.8627 LR:0.00000300:   8%|▊         | 26/344 [06:35<54:24, 10.27s/it]  "
      ]
     }
    ],
@@ -769,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "cd7b5752",
    "metadata": {},
    "outputs": [],
